tests/errors/declar.c
void print_int(int c);
void print_char(char c);
int scan_int();
int c;
int main(){

    int a,b,c,d;
    void x;
    int a;
    int char y;
    int arr[-10];
    int *ptr;

    return 0;
}
char c;
void foo(int ){
    int x;
    print_int(5);
}